591-fix-where-disappear: fix resizing of posts and now sidebar is hidden when they are about to overlap. Also small styling/resizing

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -27,7 +27,7 @@ text-decoration: none;
 
 .title {
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
   font-family: inherit;
   color: #333333;
 }
